# WebScope-0.1.0

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  theme  version.py
Application/: AppContext.py  Application.py
Application/Commands/: Commands.py
Application/ConfigManager/: ConfigManager.py
Application/ErrorDialog/: ErrorDialog.py
Application/Logger/: Logger.py
Application/MainWindow/: MainWindow.py
Application/QtFiles/: ErrorDialog.py  GeneralPage.py  LoggingPage.py  SettingsDialog.py  SourcePage.py  ThemeCreator.py  ThemePreview.py
Application/SettingsDialog/: SettingsDialog.py
Application/StyleManager/: StyleManager.py
Application/ThemeManager/: ThemeCreator.py  ThemesManager.py
Application/UiFiles/: GeneralPage.ui  LoggingPage.ui  LoggingPage_ui.py  MainWindow.ui  SettingsDialog.ui  SourcePage.ui  ThemeCreator.ui  ThemePreview.ui
Commands/: commands.py
Config/: ConfigManager.py  config.json  configmanager.py
Logs/: Logger.py
Users/: usersmanager.py
Users/Default/: user_config.json
Version 0.1.0/: LICENSE  main.py
Version 0.1.0/QtGuiFiles/: CustomDialog.ui  MainWindow.ui
config/: config.default.json
libs/: application.py
libs/Commands/: commands.py
libs/Errors/: exceptions.py
libs/Logging/: logging.py
libs/MainWindow/: mainwindow.py
libs/QtGuiFiles/: MainWindow.ui  ProfileDialog.ui  (+3 more)
noctua/: __main__.py  app.py
noctua.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_placeholder.py
(+62 files in other folders)
